# gameboy-emulator

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js  tsconfig.json  vcpkg-configuration.json  vcpkg.json  vite.config.ts
apps/eframe/: Cargo.toml  Trunk.toml  index.html  justfile
apps/eframe/assets/: index.css
apps/eframe/src/: app.rs  audio.rs  cartridge.rs  cli.rs  file_manager.rs  gameboy_task.rs  gui.rs  main.rs
apps/eframe/src/file_manager/: file_info.rs  file_picker_async.rs  native.rs  web.rs
apps/eframe/src/gui/: about.rs  audio.rs  control.rs  palettes.rs  rom_drop_area.rs  screen_area.rs  state.rs  tiles.rs
apps/eframe/src/gui/components/: color_rect.rs  mod.rs
apps/eframe/src/sys/: mod.rs
apps/eframe/src/sys/native/: thread.rs
apps/eframe/src/sys/wasm/: thread.rs
apps/libretro/: Cargo.toml
apps/libretro/src/: key_mappings.rs  lib.rs
apps/sdl3/: CMakeLists.txt
apps/sdl3/src/: app.cpp  app.hpp  main.cpp
apps/sdl3/src/imgui/: imgui.hpp
apps/sdl3/src/sdl/: sdl.hpp  sdl_context.hpp  sdl_error.hpp  sdl_texture.hpp  sdl_window.hpp
apps/sdl3/src/utils/: common.hpp  files.hpp  scaling.hpp  vec2.hpp
core/gb-core/: Cargo.toml
core/gb-core-c/: Cargo.toml  gb-bindings.h
core/gb-core-c/cmake/: CMakeLists.txt
core/gb-core-c/cmake/include/gb/: gb.h
core/gb-core-c/src/: button.rs  lib.rs  types.rs
core/gb-core-wasm/: Cargo.toml
core/gb-core-wasm/src/: lib.rs
core/gb-core/src/: apu.rs  audio copy.rs  audio.rs  cartridge.rs  cartridge_info.rs  constants.rs  cpu.rs  error.rs  graphics.rs  joypad.rs  lib.rs  memory.rs  ppu.rs  serial.rs  timer.rs
core/gb-core/src/apu/channels/: mod.rs  noise_channel.rs  pulse_channel1.rs  pulse_channel2.rs  wave_channel.rs
core/gb-core/src/cartridge/: compatibility_palettes.rs  error.rs  header.rs  info.rs  licensee_code.rs  mbc.rs  mbc_type.rs  title.rs
core/gb-core/src/cartridge/compatibility_palettes/: palette_id_index.rs  palettes.rs  title_checksum_lookup_table.rs
core/gb-core/src/cartridge/info/: cartridge_type.rs  cgb_flag.rs  compatibility_palettes.rs  dmg_compatibility_palettes.rs  extra_features.rs  licensee_code.rs  new_licensee_code.rs  old_licensee_code.rs  ram_banks.rs  ram_size.rs  rom_size.rs  title.rs
core/gb-core/src/cartridge/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc30.rs  mbc5.rs  no_mbc.rs
core/gb-core/src/cartridge_info/: error.rs  extra_features.rs  header.rs  ram_banks.rs  rom_banks.rs
core/gb-core/src/components/: apu.rs  cartridge.rs  cpu.rs  joypad.rs  mbc.rs  memory.rs  mod.rs  ppu.rs  serial.rs  timer.rs
core/gb-core/src/components/apu/: envelope.rs  frame_sequencer.rs  frequency_timer.rs  high_pass_filter.rs  length_timer.rs  period_divider.rs  sweep.rs  wave_duty.rs
core/gb-core/src/components/cartridge/: error.rs  info.rs  mbc.rs  mbc1.rs
core/gb-core/src/components/cpu/: instructions.rs  registers.rs
core/gb-core/src/cpu/: control_br.rs  control_br_aux.rs  control_misc.rs  instructions.rs  opcode_map.rs  registers.rs  x16_alu.rs  x16_alu_aux.rs  x16_lsm.rs  x8_alu.rs  x8_alu_aux.rs  x8_lsm.rs  x8_rsb.rs  x8_rsb_aux.rs  x8_rsb_prefixed.rs
core/gb-core/src/graphics/: color_ram.rs  draw_line_cgb.rs  draw_line_dmg.rs  lcd_control.rs  lcd_status.rs  sprite.rs  video_ram.rs  vram_dma.rs
core/gb-core/src/joypad/: line_selection.rs
core/gb-core/src/memory/: bootrom.rs  high_ram.rs  interrupts.rs  oam_dma.rs  speed_switch.rs  undocumented_registers.rs  vram_dma.rs  work_ram.rs
core/gb-core/src/ppu/: color_ram.rs  debug_getters.rs  draw_line_cgb.rs  draw_line_dmg.rs  lcd_control.rs  oam.rs  oam_dma.rs  sprite.rs  video_ram.rs  vram_dma.rs
core/gb-core/src/utils/: bits.rs  button.rs  color.rs  events.rs  macros.rs  mod.rs  screen.rs
core/gb-core/tests/: alu.rs  blargg.rs  cgb_acid2.rs  cpu.rs  dmg_acid2.rs  mooneye.rs
core/gb-core/tests/common/: blargg.rs  error.rs  macros.rs  mod.rs  mooneye.rs  runners.rs  validators.rs
gb-core-wasm/: Cargo.toml
gb-core-wasm/src/: lib.rs
gb-ui-native/: Cargo.toml
gb-ui-native/src/: app.rs  gui.rs  key_mappings.rs  main.rs  overlay.rs
gb-ui-native/src/gui/: control.rs  file_loader.rs  graphics_area.rs  palettes.rs  screen_area.rs  state.rs  tiles.rs
gb-ui-native/src/gui/components/: color_rect.rs
gb-ui-native/src/widgets/: control.rs  state.rs
gb-ui-sdl2-c/: CMakeLists.txt
gb-ui-sdl2-c/src/: main.c
platform/eframe/: Cargo.toml
platform/eframe-rust/: Cargo.toml
platform/eframe-rust/src/: app.rs  cartridge.rs  gui.rs  key_mappings.rs  main.rs
platform/eframe-rust/src/gui/: control.rs  file_loader.rs  palettes.rs  screen_area.rs  state.rs  tiles.rs
platform/eframe/src/: app.rs  cartridge.rs  gui.rs  key_mappings.rs  main.rs
platform/eframe/src/gui/: palettes.rs  screen_area.rs  state.rs  tiles.rs
platform/libretro/: Cargo.toml
platform/libretro/src/: key_mappings.rs  lib.rs
platform/pixels/: Cargo.toml
platform/pixels/src/: app.rs  egui_framework.rs  gui.rs  main.rs
platform/pixels/src/gui/: tiles.rs
platform/pixels/src/utils/: scaling.rs
platform/sdl2-c/: CMakeLists.txt
platform/sdl2-c/src/: main.c
platform/sdl2-imgui-cpp/: CMakeLists.txt
platform/sdl2-imgui-cpp/src/: main.cpp
platform/sdl2-rust/: Cargo.toml
platform/sdl2-rust/src/: app.rs  key_mappings.rs  main.rs
platform/sdl3/: CMakeLists.txt
platform/sdl3-c/: CMakeLists.txt
platform/sdl3-c/src/: main.c
platform/sdl3-cpp/: CMakeLists.txt
platform/sdl3-cpp/src/: main.cpp
platform/sdl3-cpp/src/sdl/: sdl_context.hpp  sdl_renderer.hpp  sdl_texture.hpp  sdl_window.hpp
platform/sdl3-imgui-cpp/: CMakeLists.txt
platform/sdl3-imgui-cpp/src/: main.cpp
platform/sdl3/src/: app.cpp  main.cpp
platform/sdl3/src/imgui/: imgui.hpp
platform/sdl3/src/sdl/: sdl_renderer.hpp
platform/sdl3/src/utils/: scaling.hpp
ui-native/: Cargo.toml
ui-native/src/: app.rs  main.rs  overlay.rs  overlay_framework.rs
ui-native/src/widgets/: control.rs  state.rs
(+343 files in other folders)
