[workspace]
resolver = "2"
members = [
  "core/gb-core",
  "core/gb-core-c",
  "core/gb-core-wasm",
  "core/gb-opcode-info",
  "platform/eframe",
  "platform/libretro",
  "platform/sdl2-rust",
]

[workspace.lints.clippy]
# Groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# style
new_without_default = "allow"

# pedantic
cast_lossless = "allow"            # Noisy and verbose.
cast_possible_truncation = "allow" # Intentional, but may be possible to mitigate.
cast_possible_wrap = "allow"       # Used intentionally and extensively.
collapsible_if = "allow"
match_same_arms = "allow"
module_name_repetitions = "allow"  # Annoying.
must_use_candidate = "allow"       # This one should be fixed.
similar_names = "allow"            # Nope.
too_many_lines = "allow"
unreadable_literal = "allow"       # May not improve readability.
unused_self = "allow"
verbose_bit_mask = "allow"         # LLVM generates worse code on x86_64.

# nursery
enum_variant_names = "allow"   # Annoying.
missing_const_for_fn = "allow" # Noisy, could address this one.
option_if_let_else = "allow"   # Annoying and less readable.
redundant_pub_crate = "allow"  # Some occurrences can be improved.

# Can be addressed by adding documentation.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
arrayvec = "0.7.4"
bitflags = "2.6.0"
clap = { version = "4.5.9", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
eframe = { version = "0.28.1", default-features = false }
egui = "0.28.1"
enum_dispatch = "0.3.13"
env_logger = "0.11.3"
gb-core = { path = "./core/gb-core" }
image = { version = "0.25.1", default-features = false }
itertools = "0.13.0"
libretro-rs = "0.1.3"
log = "0.4.22"
num = { version = "0.4.3", default-features = false }
paste = "1.0.15"
rfd = "0.14.1"
sdl2 = "0.37.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
