[workspace]
resolver = "2"
members = [
  "apps/eframe",
  "apps/libretro",
  "core/gb-core",
  "core/gb-core-c",
  "core/gb-core-wasm",
  "core/gb-opcode-info",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[workspace.lints.clippy]
# Groups
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# nursery
missing_const_for_fn = "allow" # Noisy, could address this one
option_if_let_else = "allow" # Annoying and less readable
redundant_pub_crate = "allow" # Some occurrences can be improved

# pedantic
cast_lossless = "allow" # Noisy and verbose
cast_possible_truncation = "allow" # Intentional, but may be possible to mitigate
cast_possible_wrap = "allow" # Used intentionally and extensively
collapsible_if = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow" # Can be addressed by adding documentation
missing_panics_doc = "allow" # Can be addressed by adding documentation
module_name_repetitions = "allow" # Annoying
similar_names = "allow" # Nope
too_many_lines = "allow"
unreadable_literal = "allow" # May not improve readability
unused_self = "allow" # Some opcodes don't need to do anything, but keep them there for now
verbose_bit_mask = "allow" # Less readable

# style
enum_variant_names = "allow" # Annoying
new_without_default = "allow"

[workspace.dependencies]
arrayvec = "0.7.6"
bitflags = "2.9.1"
clap = { version = "4.5.41", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
cpal = "0.16.0"
eframe = { version = "0.32.0", default-features = false }
egui = "0.32.0"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
gb-core = { path = "./core/gb-core" }
image = { version = "0.25.6", default-features = false }
itertools = "0.14.0"
libretro-rs = "0.1.3"
log = "0.4.27"
paste = "1.0.15"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
