[workspace]
resolver = "3"
members = [
  "apps/eframe",
  "apps/libretro",
  "core/gb-core",
  "core/gb-core-c",
  "core/gb-opcode-info",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/marcellocordeiro/gameboy-emulator"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[workspace.lints.clippy]
# Groups
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# nursery
missing_const_for_fn = "allow" # Noisy
option_if_let_else = "allow" # Less readable

# pedantic
cast_lossless = "allow" # Noisy and verbose
cast_possible_truncation = "allow" # Intentional, but can be mitigated
cast_possible_wrap = "allow" # Used intentionally and extensively
collapsible_if = "allow" # Not always desirable
match_same_arms = "allow" # Intentional for readability
missing_errors_doc = "allow" # Can be addressed by adding documentation
missing_panics_doc = "allow" # Can be addressed by adding documentation
module_name_repetitions = "allow" # Annoying
similar_names = "allow" # Nope
too_many_lines = "allow"
unreadable_literal = "allow" # May not improve readability
unused_self = "allow" # Some opcodes don't need to do anything, but keep them there for now
verbose_bit_mask = "allow" # Less readable

# style
enum_variant_names = "allow" # Annoying
new_without_default = "allow"

[workspace.dependencies]
arrayvec = "0.7.6"
bitflags = "2.10.0"
clap = { version = "4.5.51", features = ["derive"] }
cpal = { version = "0.16.0" }
eframe = { version = "0.33.0", default-features = false }
egui = { version = "0.33.0", default-features = false }
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
gb-core = { path = "./core/gb-core" }
image = { version = "0.25.8", default-features = false }
itertools = "0.14.0"
libretro-rs = "0.1.3"
log = "0.4.28"
paste = "1.0.15"
pollster = "0.4.0"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-web = "0.1.3"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
wgpu = { version = "27.0.1" } # Workaround for eframe
