[package]
name = "gb-core-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bootrom = []

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gb-core = { path = "../gb-core" }
log = "0.4.20"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"]
