[package]
name = "gb-ui-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.2"
eframe = "0.22.0"
env_logger = "0.10.0"
log = "0.4.20"
rfd = "0.11.4"

[dependencies.gb-core]
path = "../gb-core"
# features = ["bootrom", "cgb"]
