[package]
name = "gb-eframe"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
bundled-bootrom = ["gb-core/bundled-bootrom"]

[dependencies]
cfg-if = { workspace = true }
cpal = { workspace = true, features = ["wasm-bindgen"] }
#crossbeam = { workspace = true }
eframe = { workspace = true, features = ["persistence", "wgpu", "wayland"] }
egui = { workspace = true, features = ["default_fonts"] }
gb-core = { workspace = true }
log = { workspace = true }
rfd = { workspace = true }
#tracing = { workspace = true }
#tracing-subscriber = { workspace = true }
wgpu = { workspace = true }

# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
#tracing-web = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
web-time = { workspace = true }
tokio = { workspace = true }
tokio_with_wasm = { workspace = true, features = ["full"] }
