[package]
name = "gb-libretro"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
bundled-bootrom = ["gb-core/bundled-bootrom"]

[dependencies]
gb-core = { workspace = true }
libretro-rs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
