[package]
name = "gb-core-c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "dylib"]

[features]
# default = ["bootrom", "cgb"]
bootrom = ["gb-core/bootrom"]
cgb = ["gb-core/cgb"]

[dependencies]
gb-core = { path = "../gb-core" }
