[package]
name = "gb-core-c"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["staticlib"]

[features]
bootrom = ["gb-core/bootrom"]

[dependencies.gb-core]
path = "../gb-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
