[package]
name = "gb-core-c"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["staticlib"]

[features]
bootrom = ["gb-core/bootrom"]

[dependencies.gb-core]
path = "../gb-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
