[package]
name = "gb-core-wasm"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
bootrom = ["gb-core/bootrom"]

[dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
gb-core = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }

[dependencies.web-sys]
workspace = true
features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
