[package]
name = "gb-core-wasm"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
bootrom = ["gb-core/bootrom"]

[dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
gb-core = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }

[dependencies.web-sys]
workspace = true
features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"]
