[package]
name = "gb-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
bootrom = []

[dependencies]
arrayvec = { workspace = true }
bitflags = { workspace = true }
enum_dispatch = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
itertools = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
