[package]
name = "gb-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
bootrom = []

[dependencies]
arrayvec = { workspace = true }
bitflags = { workspace = true }
enum_dispatch = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
