[package]
name = "gb-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
bundled-bootrom = []

[dependencies]
arrayvec = { workspace = true }
bitflags = { workspace = true }
enum_dispatch = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
