[package]
name = "gameboy-emulator-eframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["bootrom", "cgb"]
bootrom = ["gb-core/bootrom"]
cgb = ["gb-core/cgb"]

[dependencies.gb-core]
workspace = true

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
eframe = { version = "0.24.0", default-features = false, features = [
    "glow",
    "wayland",
    "x11",
] }
egui = "0.24.0"
env_logger = "0.10.1"
log = "0.4.20"
rfd = { version = "0.12.1", default-features = false, features = [
    "xdg-portal",
] }
