[package]
name = "gameboy-emulator-eframe"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
# default = ["bootrom", "cgb"]
bootrom = ["gb-core/bootrom"]
cgb = ["gb-core/cgb"]

[dependencies.gb-core]
workspace = true

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
eframe = { version = "0.25.0", default-features = false, features = [
    "glow",
    "wayland",
    "x11",
] }
egui = "0.25.0"
env_logger = "0.10.1"
log = "0.4.20"
rfd = { version = "0.13.0", default-features = false, features = [
    "xdg-portal",
] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
