[package]
name = "gb-eframe"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
bootrom = ["gb-core/bootrom"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
eframe = { version = "0.26.2", default-features = false, features = [
    "wgpu",
    "wayland",
    "x11",
] }
egui = "0.26.2"
env_logger = "0.11.3"
gb-core = { workspace = true }
log = "0.4.21"
rfd = "0.14.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
