[package]
name = "gb-eframe"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
bootrom = ["gb-core/bootrom"]

[dependencies]
clap = { workspace = true }
eframe = { workspace = true, features = ["glow", "wayland", "x11"] }
egui = { workspace = true }
env_logger = { workspace = true }
gb-core = { workspace = true }
log = { workspace = true }
rfd = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
