[package]
name = "gb-libretro"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
bootrom = ["gb-core/bootrom"]
cgb = ["gb-core/cgb"]

[dependencies.gb-core]
path = "../../core/gb-core"

[dependencies]
env_logger = "0.11.1"
libretro-rs = "0.1.3"
log = "0.4.20"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
