[package]
name = "gb-libretro"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
bootrom = ["gb-core/bootrom"]

[dependencies]
env_logger = "0.11.3"
gb-core = { workspace = true }
libretro-rs = "0.1.3"
log = "0.4.21"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
