[package]
name = "gb-libretro"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
bootrom = ["gb-core/bootrom"]

[dependencies]
env_logger = { workspace = true }
gb-core = { workspace = true }
libretro-rs = { workspace = true }
log = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
