[package]
name = "gb-pixels"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true, features = ["wayland", "x11"] }
env_logger = { workspace = true }
error-iter = { workspace = true }
gb-core = { workspace = true }
log = { workspace = true }
pixels = { workspace = true }
rfd = { workspace = true }
winit = { workspace = true }
winit_input_helper = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
