[package]
name = "gb-sdl2"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
bootrom = ["gb-core/bootrom"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
gb-core = { workspace = true }
log = "0.4.20"
rfd = "0.14.0"
sdl2 = { version = "0.36.0", features = ["bundled"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
