[package]
name = "gb-sdl2"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
bootrom = ["gb-core/bootrom"]

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
gb-core = { workspace = true }
log = { workspace = true }
rfd = { workspace = true }
sdl2 = { workspace = true, features = ["bundled"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
